examples/test/testpolicy18229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18229
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key45: value40
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value36
          key35: value38
      podSelector:
        matchLabels:
          key31: value43
          key28: value15
          key7: value12
